--- a/Frontend/page_dokter.html
+++ b/Frontend/page_dokter.html
@@ -79,10 +79,6 @@
                     <div class="doctor-image">
                         <img src="assets/images/dokter1.jpg" alt="Dr. Sarah Wijaya, M.Psi.">
                     </div>
-                    <div class="doctor-rating">
-                        <span class="stars">★★★★★</span>
-                        <span class="rating-text">4.9/5</span>
-                    </div>
                     <div class="doctor-info">
                         <h3>Dr. Sarah Wijaya, M.Psi.</h3>
                         <p class="doctor-specialty">Psikolog Klinis</p>
@@ -91,14 +87,12 @@
                         <div class="doctor-skills">
                             <span class="skill-tag">Kecemasan</span>
                             <span class="skill-tag">Depresi</span>
-                            <span class="skill-tag">Trauma</span>
+                            <span class="skill-tag">Bipolar</span>
                         </div>
-                        <div class="doctor-actions">
-                            <button class="btn-review" data-doctor="sarah-wijaya">
-                                <i class="fas fa-star"></i>
-                                Baca Review
-                                <span class="review-count">(24)</span>
-                            </button>
+                        <div class="doctor-actions-container">
+                            <a href="javascript:void(0);" class="doctor-profile-btn" onclick="setDoctorProfile('sarah-wijaya')">
+                                 Detail Profil
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -106,11 +100,7 @@
                 <!-- Doctor Card 2 - Dr. Ahmad Rahman -->
                 <div class="doctor-card" data-category="psikiater">
                     <div class="doctor-image">
-                        <img src="assets/images/dokter1.jpg" alt="Dr. Ahmad Rahman, Sp.KJ">
-                    </div>
-                    <div class="doctor-rating">
-                        <span class="stars">★★★★★</span>
-                        <span class="rating-text">4.8/5</span>
+                        <img src="assets/images/dokter2.jpg" alt="Dr. Ahmad Rahman, Sp.KJ">
                     </div>
                     <div class="doctor-info">
                         <h3>Dr. Ahmad Rahman, Sp.KJ</h3>
@@ -118,16 +108,14 @@
                         <p class="doctor-experience">🕐 12 Tahun Pengalaman</p>
                         <p class="doctor-desc">Ahli dalam diagnosis dan pengobatan gangguan mental kompleks dengan pendekatan holistik dan farmakoterapi.</p>
                         <div class="doctor-skills">
-                            <span class="skill-tag">Bipolar</span>
-                            <span class="skill-tag">Skizofrenia</span>
                             <span class="skill-tag">OCD</span>
+                            <span class="skill-tag">Gangguan Psikotik</span>
+                            <span class="skill-tag">ADHD</span>
                         </div>
-                        <div class="doctor-actions">
-                            <button class="btn-review" data-doctor="ahmad-rahman">
-                                <i class="fas fa-star"></i>
-                                Baca Review
-                                <span class="review-count">(18)</span>
-                            </button>
+                        <div class="doctor-actions-container">
+                            <a href="javascript:void(0);" class="doctor-profile-btn" onclick="setDoctorProfile('ahmad-rahman')">
+                                 Detail Profil
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -135,11 +123,7 @@
                 <!-- Doctor Card 3 - Maya Sari -->
                 <div class="doctor-card" data-category="psikolog">
                     <div class="doctor-image">
-                        <img src="assets/images/dokter1.jpg" alt="Maya Sari, S.Psi.">
-                    </div>
-                    <div class="doctor-rating">
-                        <span class="stars">★★★★☆</span>
-                        <span class="rating-text">4.7/5</span>
+                        <img src="assets/images/dokter3.jpg" alt="Maya Sari, S.Psi.">
                     </div>
                     <div class="doctor-info">
                         <h3>Maya Sari, S.Psi.</h3>
@@ -151,12 +135,10 @@
                             <span class="skill-tag">Keluarga</span>
                             <span class="skill-tag">Relationship</span>
                         </div>
-                        <div class="doctor-actions">
-                            <button class="btn-review" data-doctor="maya-sari">
-                                <i class="fas fa-star"></i>
-                                Baca Review
-                                <span class="review-count">(15)</span>
-                            </button>
+                        <div class="doctor-actions-container">
+                            <a href="javascript:void(0);" class="doctor-profile-btn" onclick="setDoctorProfile('maya-sari')">
+                                Detail Profil
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -164,11 +146,7 @@
                 <!-- Doctor Card 4 - Dr. Rina Dewi -->
                 <div class="doctor-card" data-category="psikiater">
                     <div class="doctor-image">
-                        <img src="assets/images/dokter1.jpg" alt="Dr. Rina Dewi, Sp.KJ">
-                    </div>
-                    <div class="doctor-rating">
-                        <span class="stars">★★★★★</span>
-                        <span class="rating-text">4.9/5</span>
+                        <img src="assets/images/dokter4.jpg" alt="Dr. Rina Dewi, Sp.KJ">
                     </div>
                     <div class="doctor-info">
                         <h3>Dr. Rina Dewi, Sp.KJ</h3>
@@ -180,12 +158,10 @@
                             <span class="skill-tag">Dementia</span>
                             <span class="skill-tag">Geriatri</span>
                         </div>
-                        <div class="doctor-actions">
-                            <button class="btn-review" data-doctor="rina-dewi">
-                                <i class="fas fa-star"></i>
-                                Baca Review
-                                <span class="review-count">(22)</span>
-                            </button>
+                        <div class="doctor-actions-container">
+                            <a href="javascript:void(0);" class="doctor-profile-btn" onclick="setDoctorProfile('rina-dewi')">
+                                Detail Profil
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -193,11 +169,7 @@
                 <!-- Doctor Card 5 - Dr. Lisa Chen -->
                 <div class="doctor-card" data-category="psikolog">
                     <div class="doctor-image">
-                        <img src="assets/images/dokter1.jpg" alt="Dr. Lisa Chen, M.Psi.">
-                    </div>
-                    <div class="doctor-rating">
-                        <span class="stars">★★★★★</span>
-                        <span class="rating-text">4.8/5</span>
+                        <img src="assets/images/dokter5.jpg" alt="Dr. Lisa Chen, M.Psi.">
                     </div>
                     <div class="doctor-info">
                         <h3>Dr. Lisa Chen, M.Psi.</h3>
@@ -209,12 +181,10 @@
                             <span class="skill-tag">Remaja</span>
                             <span class="skill-tag">Perkembangan</span>
                         </div>
-                        <div class="doctor-actions">
-                            <button class="btn-review" data-doctor="lisa-chen">
-                                <i class="fas fa-star"></i>
-                                Baca Review
-                                <span class="review-count">(19)</span>
-                            </button>
+                        <div class="doctor-actions-container">
+                            <a href="javascript:void(0);" class="doctor-profile-btn" onclick="setDoctorProfile('lisa-chen')">
+                               Detail Profil
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -222,11 +192,7 @@
                 <!-- Doctor Card 6 - Dr. Budi Santoso -->
                 <div class="doctor-card" data-category="psikiater">
                     <div class="doctor-image">
-                        <img src="assets/images/dokter1.jpg" alt="Dr. Budi Santoso, Sp.KJ">
-                    </div>
-                    <div class="doctor-rating">
-                        <span class="stars">★★★★☆</span>
-                        <span class="rating-text">4.6/5</span>
+                        <img src="assets/images/dokter6.jpg" alt="Dr. Budi Santoso, Sp.KJ">
                     </div>
                     <div class="doctor-info">
                         <h3>Dr. Budi Santoso, Sp.KJ</h3>
@@ -238,12 +204,10 @@
                             <span class="skill-tag">Psikosis</span>
                             <span class="skill-tag">Konsultasi</span>
                         </div>
-                        <div class="doctor-actions">
-                            <button class="btn-review" data-doctor="budi-santoso">
-                                <i class="fas fa-star"></i>
-                                Baca Review
-                                <span class="review-count">(16)</span>
-                            </button>
+                        <div class="doctor-actions-container">
+                            <a href="javascript:void(0);" class="doctor-profile-btn" onclick="setDoctorProfile('budi-santoso')">
+                                Detail Profil
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -317,7 +281,6 @@
                     <li><a href="chatbot.html">Chatbot 24/7</a></li>
                     <li><a href="artikel.html">Artikel Kesehatan</a></li>
                     <li><a href="tes-kesehatan.html">Tes Kesehatan Mental</a></li>
-                    <li><a href="komunitas.html">Forum Komunitas</a></li>
                 </ul>
             </div>
 
@@ -338,20 +301,19 @@
                     <li><a href="tentang.html">Tentang Kami</a></li>
                     <li><a href="page_dokter.html">Tim Dokter</a></li>
                 </ul>
-            <div class="newsletter">
-                <h5>Newsletter</h5>
-                <p>Dapatkan tips kesehatan mental mingguan</p>
-                <div class="newsletter-form">
-                    <input type="email" id="newsletter-email" placeholder="Email Anda" required>
-                    <button class="btn-subscribe" id="btn-subscribe">Subscribe</button>
-                    <button class="btn-unsubscribe" id="btn-unsubscribe" style="display: none;">Unsubscribe</button>
+                <div class="newsletter">
+                    <h5>Newsletter</h5>
+                    <p>Dapatkan tips kesehatan mental mingguan</p>
+                    <div class="newsletter-form">
+                        <input type="email" id="newsletter-email" placeholder="Email Anda" required>
+                        <button class="btn-subscribe" id="btn-subscribe">Subscribe</button>
+                        <button class="btn-unsubscribe" id="btn-unsubscribe" style="display: none;">Unsubscribe</button>
+                    </div>
+                    <div id="newsletter-message" class="newsletter-message"></div>
+                    <div id="newsletter-status" class="newsletter-status"></div>
                 </div>
-                <div id="newsletter-message" class="newsletter-message"></div>
-                <div id="newsletter-status" class="newsletter-status"></div>
             </div>
         </div>
-    </div>
-    </div>
 
         <div class="footer-bottom">
             <div class="footer-bottom-content">
