--- a/Frontend/tentang.html
+++ b/Frontend/tentang.html
@@ -35,7 +35,7 @@
         
         <section class="about-hero about-custom-hero">
             <div class="about-hero-content">
-                <p class="large-text" style="font-size: 2.5rem; line-height: 1.2;">Langkah Awal Menuju Pemulihan, Pertumbuhan, dan Kehidupan yang Lebih Seimbang</p>
+                <p class="large-text">Langkah Awal Menuju Pemulihan, Pertumbuhan, dan Kehidupan yang Lebih Seimbang</p>
             </div>
             <div class="about-hero-image">
                  <img src="assets/images/picture1.jpg" alt="Ilustrasi tentang kami">
@@ -179,7 +179,6 @@
                 <li><a href="chatbot.html">Chatbot 24/7</a></li>
                 <li><a href="artikel.html">Artikel Kesehatan</a></li>
                 <li><a href="tes-kesehatan.html">Tes Kesehatan Mental</a></li>
-                <li><a href="komunitas.html">Forum Komunitas</a></li>
             </ul>
         </div>
 
