--- a/Frontend/tes-kesehatan.html
+++ b/Frontend/tes-kesehatan.html
@@ -81,8 +81,7 @@
                     <p id="result-feedback"></p>
                     
                     <div class="result-actions">
-                        <a href="konsultasi.html" class="btn-secondary"><i class="fas fa-calendar-check"></i> Konsultasi Sekarang</a>
-                        <a href="index.html" class="btn-tertiary"><i class="fas fa-book-open"></i> Kembali ke Beranda</a>
+                        <a href="index.html" class="btn-tertiary"> Kembali ke Beranda</a>
                     </div>
                 </div>
             </div>
