--- a/Frontend/chatbot.html
+++ b/Frontend/chatbot.html
@@ -50,7 +50,7 @@
                 <h1>Halo, saya MediCareBot</h1>
                 <p>Ada yang bisa saya bantu terkait kesehatan mental atau layanan MediCare?</p>
                 
-                <div class="suggestion-grid">
+                <!-- <div class="suggestion-grid">
                     <div class="suggestion-card" data-message="Saya butuh konsultasi dengan psikolog atau psikiater">
                         <div class="suggestion-icon"><i class="fas fa-user-md"></i></div>
                         <div class="suggestion-content">
@@ -76,10 +76,10 @@
                         <div class="suggestion-icon"><i class="fas fa-ambulance"></i></div>
                         <div class="suggestion-content">
                             <h4>Bantuan Darurat</h4>
-                            <p>Kontak untuk keadaan mendesak</p>
-                        </div>
+                            <p>Kontak untuk keadaan mendesak</p> -->
+                        <!-- </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <!-- Chat Messages Section -->
@@ -102,15 +102,15 @@
                         <h3>Pertanyaan Lainnya</h3>
                     </div>
                     <div class="suggestion-grid-mini">
-                        <button class="suggestion-chip" data-message="Saya butuh konsultasi dengan psikolog atau psikiater">
+                        <button class="suggestion-chip" data-message="Saya butuh bantuan untuk skrinning awal sebelum bertemu dengan psikolog atau psikiater, bantu ya!">
                             <i class="fas fa-user-md suggestion-chip-icon"></i>
-                            Konsultasi
+                            Skrinning
                         </button>
-                        <button class="suggestion-chip" data-message="Apa saja layanan MediCare?">
+                        <button class="suggestion-chip" data-message="Apakah MediCare memiliki gedung sendiri?">
                             <i class="fas fa-hospital suggestion-chip-icon"></i>
                             Layanan
                         </button>
-                        <button class="suggestion-chip" data-message="Berapa biaya konsultasi?">
+                        <button class="suggestion-chip" data-message="Apakah benar medicare adalah layanan free?">
                             <i class="fas fa-money-bill-wave suggestion-chip-icon"></i>
                             Biaya
                         </button>
