--- a/Frontend/chatbot.html
+++ b/Frontend/chatbot.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="css/auth.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="chatbot-body">
     <header class="header">
-
         <button class="back-button" onclick="window.location.href='index.html'">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M19 12H5M12 19L5 12L12 5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -148,13 +147,7 @@
         </div>
     </main>
 
-    <!-- Hapus chatbot button di halaman chatbot -->
-    
     <script src="js/script.js"></script>
     <script src="js/chatbot.js"></script>
 </body>
 </html>
-
-
-
-
