--- a/Frontend/konsultasi.html
+++ b/Frontend/konsultasi.html
@@ -10,29 +10,12 @@
    
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
-            <img src="assets/icons/flower.svg" alt="Logo Medicare">
-            <span class="logo-text">MediCare</span>
-        </div>
-    
-        <nav class="nav">
-            <ul>
-                <li><a href="index.html">Beranda</a></li>
-                <li><a href="artikel.html">Artikel</a></li>
-                <li><a href="tentang.html">Tentang kami</a></li>
-                <li><a href="javascript:void(0);" onclick="handleConsultationNavigation()" class="active">Konsultasi</a></li> 
-            </ul>
-        </nav>
-    
-        <div class="profile-icon">
-            <a href="profil.html">
-                <img src="assets/images/profil.jpg" alt="Foto profil pengguna">
-            </a>
-        </div>
-    </header>
-
-    <main class="online-counseling-page">
+   <div class="back-button-container">
+        <button class="back-home-btn" onclick="window.location.href='index.html'" title="Kembali ke Beranda">
+            &lt;
+        </button>
+    </div>
+ <main class="online-counseling-page">
         <section class="consult-hero">
             <div class="consult-hero-container">
                 <div class="consult-hero-content">
