--- a/Frontend/chatbot.html
+++ b/Frontend/chatbot.html
@@ -47,7 +47,7 @@
                 <div class="welcome-icon">
                     <img src="assets/images/muliadi.jpg" alt="MediCare Bot" onerror="this.src='assets/icons/flower.svg'">
                 </div>
-                <h1>Halo, saya MediCareBot</h1>
+                <h1>Halo, saya MediBot</h1>
                 <p>Ada yang bisa saya bantu terkait kesehatan mental atau layanan MediCare?</p>
                 
                 <!-- <div class="suggestion-grid">
